2008-12-02  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSecureTextField.m: Added initWithCoder: method which 
	turns on bullets by default.

2008-11-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* install.sh: Fix header syntax and provide default for make
	command argument.

2008-11-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLayoutManager.m: Fix uninitialised variable ... but is the
	fix correct?

2008-11-29 00:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Added back in _root assignment in
	-[NSIBObjectData initWithCoder:].  It's removal caused an issue with
	loading some nibs.

2008-11-28 15:20-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Correct issue when loading into
	Gorm.  NSClassSwapper should check to see if it's in the gui builder
	and return the appropriate class.

2008-11-27 10:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Corrected issue with using generic
	cells on some controls.

2008-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* NSSound.m:
	* NSWorkspace.m:
	* NSPasteboard.m:
	Cope with daemons being installed in any domain, not just system.

2008-11-27 01:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSWorkspace.m: [NSWorkspace getInfoForFile:application:type:]
	appName output parameter is set to nil if no application is found.

2008-11-27 00:48-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Minor correction to previous change.

2008-11-26 21:09-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Correct bug #24780.  There was an issue 
	in NSClassSwapper when decoding classes which use cells from nib files.
	* Source/NSSecureTextField.m: Encode in encodeWithCoder and 
	decodeWithCoder: a key for storing the bool _echosBullets.

2008-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
